<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity"
    tools:ignore="MissingConstraints">

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/imgDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:src="@drawable/ic_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <EditText
        android:id="@+id/NotesTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10.00dp"
        android:background="@null"
        android:ellipsize="end"
        android:fontFamily="@font/manrope_bold"
        android:hint="@string/notes_title"
        android:inputType="text"
        android:padding="10.00dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="14.00sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgBack" />

    <TextView
        android:id="@+id/tvDatetime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10.00dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="10.00dp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:ellipsize="end"
        android:fontFamily="@font/manrope_bold"
        android:paddingStart="@dimen/_10sdp"
        android:singleLine="true"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/NotesTitle" />

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10.00dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDatetime">

        <View
            android:id="@+id/colorView"
            android:layout_width="@dimen/_5sdp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_5sdp"
            android:background="@color/Blue" />

        <EditText
            android:id="@+id/NotesSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ellipsize="end"
            android:fontFamily="@font/manrope_regular"
            android:hint="@string/notes_sub_title"
            android:inputType="text"
            android:padding="10.00dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/_10ssp"

            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutImage"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/l1">


        <ImageView
            android:id="@+id/imgNote"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:visibility="gone"
            />

        <ImageView
            android:id="@+id/imgDelete"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_alignParentEnd="true"
            android:visibility="gone"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_delete"
            />

    </RelativeLayout>



    <LinearLayout
        android:id="@+id/layoutWebUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/_10sdp"
        android:layout_margin="@dimen/_10sdp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutImage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <EditText
            android:id="@+id/NoteWebLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:fontFamily="@font/manrope_regular"
            android:hint="@string/web_link"
            android:inputType="textMultiLine"
            android:text="http://"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/_12ssp"
             />

        <ImageView
            android:id="@+id/imgUrlDelete"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:visibility="gone"
            android:src="@drawable/ic_cancel"
            />

    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="end">



            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:backgroundTint="@color/Blue"
                android:fontFamily="@font/manrope_bold"
                android:text="@string/Cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

            <Button
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:backgroundTint="@color/Blue"
                android:fontFamily="@font/manrope_bold"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />


        </LinearLayout>


    </LinearLayout>


    <TextView
        android:id="@+id/tvWebLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10.00dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="10.00dp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:ellipsize="end"
        android:fontFamily="@font/manrope_bold"
        android:padding="@dimen/_10sdp"
        android:singleLine="true"
        android:visibility="visible"
        android:autoLink="web"
        android:layout_weight="1"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutWebUrl"
        />




    <EditText
        android:id="@+id/NotesDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10.00dp"
        android:fontFamily="@font/manrope_regular"
        android:hint="@string/notes_desc"
        android:inputType="textMultiLine"
        android:padding="10.00dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWebLink" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imgMore"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_gravity="center"
            android:src="@drawable/img_bar" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>